--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
+      <div class="balance" id="checking-balance">$0</div>
       <input type="text" placeholder="enter an amount" />
       <input type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
@@ -21,12 +21,12 @@
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
+      <div class="balance" id="savings-balance">$0</div>
       <input type="text" placeholder="enter an amount" />
       <input type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
     </div>
-
+    <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
